@@ -2,21 +2,22 @@
 Hash: SHA256
 
 DIST stig-0.5.0a.tar.gz 217135 SHA256 0ffbb7fede60d617b876c5e484df381f9bce820b302c17bbe5275074cc4e7fde SHA512 44b465255689a7cc85f90292b988f5a0b970431b1844a326ada9f3667860aed274c04ac3dd6e85e46b9eb04ca03a8ebc8024282771076efe32b2c76028839ab3 WHIRLPOOL e4aae2ffabb0c47873150476df3d16a39d443b9d77141e6292482af960ec0ba06e6de91c5fdf4bd1b6a39c9d61ff24621e6c3feeeb83e8fc747d4d602528b5b6
+DIST stig-0.6.0a.tar.gz 262908 SHA256 870473488d460bdd51cef3b40f920e588b3e986346eef4913047cde6a1fcc8ae SHA512 170ff603a65302c88af48af26c53a34708af6556f80dfdbd70f2fe12d00360075176ff294c640205e683ff60765cb493c687ef080b0c64356a4d078941a544ac WHIRLPOOL c7d542ff2f145bdc0c28974198206d00611db33cff737a98306aaa6a7ab53dc0735d5622bee378bf9bae4ddb2362308d46e4f5b98d670a5c94bb37e83fbe67b6
 -----BEGIN PGP SIGNATURE-----
 
-iQKTBAEBCAB9FiEERMkDQjkszrVa22ISLwTjHwcgHn0FAlj6DqhfFIAAAAAALgAo
+iQKTBAEBCAB9FiEERMkDQjkszrVa22ISLwTjHwcgHn0FAlj/EytfFIAAAAAALgAo
 aXNzdWVyLWZwckBub3RhdGlvbnMub3BlbnBncC5maWZ0aGhvcnNlbWFuLm5ldDQ0
 QzkwMzQyMzkyQ0NFQjU1QURCNjIxMjJGMDRFMzFGMDcyMDFFN0QACgkQLwTjHwcg
-Hn1PnQ//fceuNi4sykyz68xOTTNQBWw4YlgC40K+7d8fbkXOS0tfvJ2dpjFnGEJX
-eTB3b+9kinfNcDW4jFGG9fBtYDyyg4+2FuUR9cS1rTwlDOsd6tnhcrVhQuoPLMil
-Dz82wMFtMBhG6qUKAO25/ZOpx6M5GgnHU+iVxkla9o7jSs5LxROdn28Z8c7PDWwm
-zgNXXg9/bEs6I5iwtVgghLMYX7AUJXXl7kzD34xL96ZsjZICPi4NtSaZhmttbAXh
-OREU80ise3mLFT8YBRXsbxu2Js6iQ0V0Em/hZvJc4gYwYkmQ0ZT2po+PyY7ow4aC
-gvhd4cbP/rixn/xUXGJtog1M1mOPLSnqxCMX1vubXzkf/E4/yrfCFTWtS3+gdwFG
-bfO9AsrYVH/d8N2CV8Q4hVk+kb1+oFS+90Rn8XebFnx/sev3vo1mcBY0CwuAAMme
-nR4upPqB+PaQIxYhbidUMtMw0zzNfiwg4TK3VZrbo1NsQf43wwPagYkrw/fo6Y23
-924ldX4ymnLY0N2uCFzzc3vm7toRiAveQTWnOQfOqQ9/EVUoZqSuspyC8Aml775n
-JjEZAa3JlBBBHz4oyyMBYlcHejFoWwuLejNcD/Lz0E9mLI8tjoW3kSRiuEvnzSD3
-9kSg1WctqFAoguYwXQncnzqR9XbFWG+Br7eHBkBd1COyeauxpQA=
-=r1HM
+Hn1f2BAAx5NHrC6rcaAiqKKam6ujQpRTw0QvZvzfBlp2/0EujARGxs9k+fHK/td2
+IqNhY8C4MZTzpLzqxRE3o0SJsVAoG1ks/Cxa8zvo1BqjyDP+LkTJpDxDhhIjMVwa
+zk9V62sJ9Uo37WFNabDym2fPvk5+AvCugHQm5B28w8NpOWDqxoGtenwn20j5ABtr
+UjiomfMJP2AWoXln2o7AjX/5pLJ3n5HUmPFXHyXguhKI8iD4PISry5Bpat5DZeCj
+WgluQuO9wL60LWKME6kweHJHUrA9mrIY/NQoORLac1Mi0G1hligiOURrbV0hT1bb
+kKKHVpRkRile3akxlcOMj2oVINo7P4TtyerbmHquvZITQRqr7gcNp5cgb8OF68wX
+ebVw013P2+QxWkalzqilkdwPlJAMyb5Q9+0SkpAiFFNMs3hO784xo8ey95yyKTke
+NWPCvQWYM59Ct5JtaF2PPC96sNCZs6h2DwshOZanpdX9fiM1PasAFhnuzaBBVbyW
+XsrgBrAR64+6fn8qhujCIxEBoYBKPlm11RZ76fuuTlp8UysLhjOX2zGWmb9tVl88
+DCAcxTc4C5v08vDmbpNR5xvLtegSvIZZbQdX5Fi1CrmTOAi9UvSuPV/y/gXhgu11
+X820OC4o20rmtFmmfCdz/Kx1TmicJbHd0wOMsdP+PNVazDgxYNg=
+=h3lx
 -----END PGP SIGNATURE-----
