@@ -1,3 +1,9 @@
+*stig-0.6.0a (25 Apr 2017)
+
+  25 Apr 2017; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  +stig-0.6.0a.ebuild:
+  net-p2p/stig: version bump
+
 *stig-0.5.0a (21 Apr 2017)
 
   21 Apr 2017; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
